@startuml classes

hide empty members


class IntersectionScene {
    void start(int msec = 0)
    void stop()
    void step()
    void onStep()

    QBasicTimer timer_;
}

QGraphicsScene <|-- IntersectionScene

IntersectionScene o-- BaseItem

class BaseItem {
    void step();
    {abstract} void onStep();

    int id;
}

class CarItem {
    qreal velocity_;
    qreal distance_;
    Route* route;

    PathItem* nextPath();
    --signals--
}

BaseItem <|-- CarItem

class PathItem {
    void onStep();

    std::vector<CarItem*> cars_;
    PathNode* beginNode_;
    PathNode* endNode_;
}

BaseItem <|-- PathItem

class Route {
    int id_;
    std::list<PathItem*> paths_;
}

Route -left- PathItem

CarItem::route -- Route

class CarAgent {
    CarItem* car_;
}

CarAgent -- CarItem

@enduml